// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout Column Renders - One of Each - Content Justification 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  background-color: transparent;
  padding: false;
}

.c2 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: transparent;
  padding: false;
}

.c3 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  background-color: transparent;
  padding: false;
}

<div>
  <div
    class="c0 c1"
  >
    <div>
      Element 1
    </div>
    <div>
      Element 2
    </div>
  </div>
  <div
    class="c0 c1"
  >
    <div>
      Element 1
    </div>
    <div>
      Element 2
    </div>
  </div>
  <div
    class="c0 c1"
  >
    <div>
      Element 1
    </div>
    <div>
      Element 2
    </div>
  </div>
  <div
    class="c0 c1"
  >
    <div>
      Element 1
    </div>
    <div>
      Element 2
    </div>
  </div>
  <div
    class="c2 c1"
  >
    <div>
      Element 1
    </div>
    <div>
      Element 2
    </div>
  </div>
  <div
    class="c3 c1"
  >
    <div>
      Element 1
    </div>
    <div>
      Element 2
    </div>
  </div>
</div>
`;

exports[`Layout Column Renders - One of Each - LayoutBgColor 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  background-color: transparent;
  padding: false;
}

.c2 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  background-color: #f5f6fa;
  padding: false;
}

.c3 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  background-color: #3867d6;
  padding: false;
}

.c4 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  background-color: #D3D9E1;
  padding: false;
}

<div>
  <div
    class="c0 c1"
  >
    <div>
      Element 1
    </div>
    <div>
      Element 2
    </div>
  </div>
  <div
    class="c0 c1"
  >
    <div>
      Element 1
    </div>
    <div>
      Element 2
    </div>
  </div>
  <div
    class="c0 c1"
  >
    <div>
      Element 1
    </div>
    <div>
      Element 2
    </div>
  </div>
  <div
    class="c0 c1"
  >
    <div>
      Element 1
    </div>
    <div>
      Element 2
    </div>
  </div>
  <div
    class="c2 c1"
  >
    <div>
      Element 1
    </div>
    <div>
      Element 2
    </div>
  </div>
  <div
    class="c3 c1"
  >
    <div>
      Element 1
    </div>
    <div>
      Element 2
    </div>
  </div>
  <div
    class="c4 c1"
  >
    <div>
      Element 1
    </div>
    <div>
      Element 2
    </div>
  </div>
  <div
    class="c0 c1"
  >
    <div>
      Element 1
    </div>
    <div>
      Element 2
    </div>
  </div>
</div>
`;

exports[`Layout Column Renders 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  background-color: transparent;
  padding: false;
}

<div>
  <div
    class="c0 c1"
  >
    <div>
      Element 1
    </div>
    <div>
      Element 2
    </div>
  </div>
</div>
`;

exports[`Layout Column Renders Evenly Spaced Children 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  height: 16px;
}

<div>
  <div
    class="c0"
  >
    <div>
      Element 1
    </div>
    <div
      class="c1"
      height="16"
    />
    <div>
      Element 2
    </div>
  </div>
</div>
`;

exports[`Layout Inject Element Renders 1`] = `
<div>
  <div>
    Element 1
  </div>
  <div />
  <div>
    Element 2
  </div>
  <div />
  <div>
    Element 3
  </div>
</div>
`;

exports[`Layout Row Renders - One of Each - Content Justification 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  background-color: transparent;
  padding: false;
}

.c2 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: transparent;
  padding: false;
}

.c3 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  background-color: transparent;
  padding: false;
}

<div>
  <div
    class="c0 c1"
  >
    <div>
      Element 1
    </div>
    <div>
      Element 2
    </div>
  </div>
  <div
    class="c0 c1"
  >
    <div>
      Element 1
    </div>
    <div>
      Element 2
    </div>
  </div>
  <div
    class="c0 c1"
  >
    <div>
      Element 1
    </div>
    <div>
      Element 2
    </div>
  </div>
  <div
    class="c0 c1"
  >
    <div>
      Element 1
    </div>
    <div>
      Element 2
    </div>
  </div>
  <div
    class="c2 c1"
  >
    <div>
      Element 1
    </div>
    <div>
      Element 2
    </div>
  </div>
  <div
    class="c3 c1"
  >
    <div>
      Element 1
    </div>
    <div>
      Element 2
    </div>
  </div>
</div>
`;

exports[`Layout Row Renders - One of Each - LayoutBgColor 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  background-color: transparent;
  padding: false;
}

.c2 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  background-color: #f5f6fa;
  padding: false;
}

.c3 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  background-color: #3867d6;
  padding: false;
}

.c4 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  background-color: #D3D9E1;
  padding: false;
}

<div>
  <div
    class="c0 c1"
  >
    <div>
      Element 1
    </div>
    <div>
      Element 2
    </div>
  </div>
  <div
    class="c0 c1"
  >
    <div>
      Element 1
    </div>
    <div>
      Element 2
    </div>
  </div>
  <div
    class="c0 c1"
  >
    <div>
      Element 1
    </div>
    <div>
      Element 2
    </div>
  </div>
  <div
    class="c0 c1"
  >
    <div>
      Element 1
    </div>
    <div>
      Element 2
    </div>
  </div>
  <div
    class="c2 c1"
  >
    <div>
      Element 1
    </div>
    <div>
      Element 2
    </div>
  </div>
  <div
    class="c3 c1"
  >
    <div>
      Element 1
    </div>
    <div>
      Element 2
    </div>
  </div>
  <div
    class="c4 c1"
  >
    <div>
      Element 1
    </div>
    <div>
      Element 2
    </div>
  </div>
  <div
    class="c0 c1"
  >
    <div>
      Element 1
    </div>
    <div>
      Element 2
    </div>
  </div>
</div>
`;

exports[`Layout Row Renders 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  background-color: transparent;
  padding: false;
}

<div>
  <div
    class="c0 c1"
  >
    <div>
      Element 1
    </div>
    <div>
      Element 2
    </div>
  </div>
</div>
`;

exports[`Layout Row Renders Evenly Spaced Children 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  width: 16px;
}

<div>
  <div
    class="c0"
  >
    <div>
      Element 1
    </div>
    <div
      class="c1"
      width="16"
    />
    <div>
      Element 2
    </div>
  </div>
</div>
`;

exports[`Layout Spacer Renders w/ Height 1`] = `
.c0 {
  height: 16px;
}

<div>
  <div
    class="c0"
    height="16"
  />
</div>
`;

exports[`Layout Spacer Renders w/ Width + Height 1`] = `
.c0 {
  width: 16px;
  height: 16px;
}

<div>
  <div
    class="c0"
    height="16"
    width="16"
  />
</div>
`;

exports[`Layout Spacer Renders w/ Width 1`] = `
.c0 {
  width: 16px;
}

<div>
  <div
    class="c0"
    width="16"
  />
</div>
`;
